v4 - Improves JVM parameter